# NavDataPlugin

./: .gitignore  CMakeLists.txt  LICENSE  Nav.lua  NavDataPluginExtension.lua  NavDataPluginExtensionHelper.lua  NavDataPluginNaviGraphHelper.lua  Nav_Utils.lua  README.md
MorseCodePlayer/: Morse.lua  MorsePlayer.lua  README.md
MorseCodePlayer/Sounds/sdef/Aircrafts/Morse/: dash.sdef  dit.sdef
additionalData/: Nellis.lua  Nevada.lua
additionalData/Nevada/: Nevada.lua  Nevada_ICAO.lua
additionalData/Nevada/preprocessed data/: Nevada_ICAO.gpx
additionalData/PersianGulf/: PersianGulf.lua
lib/: NavDataPluginExtension.exp  NavDataPluginExtension.lib  NavDataPluginNaviGraph.exp  NavDataPluginNaviGraph.lib
src/: CockpitAPI_Declare.h  NavDataPluginExtension.cpp  NavDataPluginExtension.h  NavDataPluginNaviGraph.cpp  NavDataPluginNaviGraph.h  NavDataPluginSimbrief.cpp  NavDataPluginSimbrief.h  ccParametersAPI.h  dllmain.cpp
